syntax = "proto3";

package peoplePackage;

message Person {
  string id = 1;       // Уникальный идентификатор
  string name = 2;     // Имя человека
  int32 age = 3;       // Возраст
}

message IdRequest {
  string id = 1;       // Идентификатор для поиска
}

message NameRequest {
  string name = 1;     // Имя для поиска
}

message Response {
  string message = 1;  // Сообщение об успехе или ошибке
}

message Empty {}

message PeopleList {
  repeated Person people = 1; // Повторяющееся сообщение для списка людей
}

service PeopleService {
  rpc AddPerson(Person) returns (Response);
  rpc FindPersonByName(NameRequest) returns (Person);
  rpc FindPersonById(IdRequest) returns (Person);
  rpc UpdatePerson(Person) returns (Response);
  rpc GetAllPeople(Empty) returns (PeopleList);
  rpc DeletePerson(IdRequest) returns (Response);
}
